--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,7 +1,7 @@
 [DEFAULT]
-upstream-branch = master
-debian-branch = debian-master
-upstream-tag = %(version)s
+upstream-branch = upstream
+debian-branch = master
+upstream-tag = upstream/%(version)s
 debian-tag = debian/%(version)s
-pristine-tar = False
+pristine-tar = True
 sign-tags = True
