--- a/debian/control
+++ b/debian/control
@@ -15,8 +15,8 @@ Build-Depends: debhelper (>= 7.0.50~),
                graphviz
 Standards-Version: 3.9.5
 Homepage: http://www.openni.org
-Vcs-Git: https://github.com/hcw70/OpenNI2.git
-Vcs-Browser: https://github.com/hcw70/OpenNI2.git
+Vcs-Git: https://alioth.debian.org/anonscm/git/pkg-multimedia/openni2.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-multimedia/openni2.git
 
 Package: libopenni2-0
 Section: libs
