need Build-Depends: default-jdk to build the java stuff

--- a/debian/control
+++ b/debian/control
@@ -11,9 +11,10 @@ Build-Depends: debhelper (>= 7.0.50~),
                libusb-1.0-0-dev (>= 1.0.8),
                python (>= 2.6),
                doxygen,
+               graphviz,
                libjpeg-dev,
                libudev-dev,
-               graphviz
+               default-jdk
 Standards-Version: 3.9.5
 Homepage: http://www.openni.org
 Vcs-Git: https://alioth.debian.org/anonscm/git/pkg-multimedia/openni2.git
