Add -fno-stack-protector to fix build on i386

--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,8 @@
 #!/usr/bin/make -f
 
+export CFLAGS=-fno-stack-protector
+export CXXFLAGS=-fno-stack-protector
+
 %:
 	dh $@ --buildsystem=makefile
 
